--- a/tcp_syn_retarans.yaml
+++ b/tcp_syn_retarans.yaml
@@ -1,5 +1,5 @@
 programs:
-  # Count SYN Retrans with key bellow, destination addwss
+  # Count SYN Retrans with keys below, destination address and port
   - name: sysnretrans
     metrics:
       counters:
@@ -14,7 +14,6 @@ programs:
             - name: dport
               size: 4
               decoders:
-                - name: string
                 - name: uint
     tracepoints:
       tcp:tcp_retransmit_skb: tracepoint__tcp__tcp_retransmit_skb
